2008-11-29  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Append -svn to version for continuing development

2008-11-28  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.4.0
	  ===================================================

2008-11-20  Curtis Gedak  <gedakc@gmail.com>

	* gparted.desktop.in.in: Added %f to Exec line.
	  - Enables device passing with gnome-desktop-item-launch
	  - Closes GParted bug #561495

2008-11-19  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Fixed dangerous copy and paste problem.
	  - Prevent a copied partition from being pasted into an existing
	    partition.

	* src/Win_GParted.cc: Added language length conditional Undo display.
	  - If translated language is relatively long, then
	      split the "Resize/Move" toolbar button text into two lines, and
	      do not display the "Undo" button.
	  - Permits all languages to see a full toolbar at default window size.
	  - Closes GParted bug #561068

2008-11-18  Curtis Gedak  <gedakc@gmail.com>

	* include/Partition.h,
	  include/Utils.h,
	  src/Dialog_Partition_Info.cc,
	  src/Dialog_Partition_New.cc,
	  src/Dialog_Partition_Resize_Move.cc,
	  src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/GParted_Core.cc,
	  src/jfs.cc,
	  src/linux_swap.cc,
	  src/ntfs.cc,
	  src/OperationCheck.cc,
	  src/reiserfs.cc,
	  src/TreeView_Detail.cc,
	  src/Win_GParted.cc,
	  src/xfs.cc: Fixed incorrect spelling of filesystem and mountpoint.

	* src/DialogFeatures.cc: Added translator comment.
	  - Renamed button to improve clarity of meaning.
	  - Closes GParted bug #561350

2008-11-14  Curtis Gedak  <gedakc@gmail.com>

	* include/DialogFeatures.h,
	  src/DialogFeatures.cc: Improved dialog readability.
	  - Changed title Features to File System Support.
	  - Renamed button Refresh to Rescan Support.
	  - Created expander for legend and added narrative.
	  - Removed columns detect and read.
	  - Added column for Required Software.