@@ -32,6 +32,7 @@ public:
 	Glib::ustring get_uuid( const Glib::ustring & path ) ;
 private:
 	void load_fs_info_cache() ;
+	Glib::ustring get_device_entry( const Glib::ustring & path ) ;
 	Glib::ustring fs_info_cache ;
 };
 
