@@ -1,5 +1,8 @@
 2008-11-29  Curtis Gedak  <gedakc@gmail.com>
 
+	* include/FS_Info.h,
+	  src/FS_Info.cc: Moved common code into new get_device_entry() method.
+
 	* configure.in: Append -svn to version for continuing development
 
 2008-11-28  Curtis Gedak  <gedakc@gmail.com>
